Responsivo à partir partir de 768px

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
             <div class="content">
                 <h2>Sobre os projetos</h2>
                 <article class="artigo-sobre">
-                    <img src="imgs/imagem-seção-sobre.jpg" alt="Homem exibindo um objeto para um grupo de pessoas.">
+                    <picture> 
+                        <source media="(max-width: 1199px)" srcset="imgs/sobre.jpg">
+                        <img src="imgs/imagem-seção-sobre.jpg" alt="Homem exibindo um objeto para um grupo de pessoas.">
+                    </picture>
                     <div class="artigo-text-sobre">
                         <h3>Participantes</h3>
                         <h3>Mais de 80 alunos organizagos em 16 grupos</h3>
